# flutter_yolo_open_kit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: linux.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_yolo_open_kit_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  main_linux.dart
example/lib/services/: yolo_service.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/test/: widget_test.dart
ios/: build_static_lib.sh  download_frameworks.sh  flutter_yolo_open_kit.podspec
ios/Classes/: YoloKitPlugin.h  YoloKitPlugin.m
lib/: flutter_yolo_open_kit.dart  flutter_yolo_open_kit_bindings_generated.dart
linux/: CMakeLists.txt  download_libs.sh
src/: CMakeLists.txt  ffi_bridge.cpp  flutter_yolo_open_kit.h  yolo_detector.cpp  yolo_detector.hpp
